now sends change to backend

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-  <!-- Servlets -->
-  <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>se.findout.tempo.server.GreetingServiceImpl</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/tempo/greet</url-pattern>
-  </servlet-mapping>
-  
   <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>Tempo.html</welcome-file>
   </welcome-file-list>
 
+  <!-- Servlets -->
+  <servlet>
+    <servlet-name>ModelRepositoryServiceImpl</servlet-name>
+    <servlet-class>se.findout.tempo.server.ModelRepositoryServiceImpl</servlet-class>
+  </servlet>
+  
   <servlet>
     <servlet-name>SystemServiceServlet</servlet-name>
     <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
@@ -25,6 +20,11 @@
     </init-param>
   </servlet>
 
+  <servlet-mapping>
+    <servlet-name>ModelRepositoryServiceImpl</servlet-name>
+    <url-pattern>/tempo/modelRepository</url-pattern>
+  </servlet-mapping>
+  
   <servlet-mapping>
     <servlet-name>SystemServiceServlet</servlet-name>
     <url-pattern>/_ah/spi/*</url-pattern>
