--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-graphics-1.0.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-gae-channel-0.4-alpha.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
