--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -14,6 +14,7 @@
   <servlet>
     <servlet-name>ModelRepositoryServiceImpl</servlet-name>
     <servlet-class>se.findout.tempo.server.ModelRepositoryServiceImpl</servlet-class>
+    <load-on-startup>0</load-on-startup>
   </servlet>
   
   <servlet>
