--- a/war/WEB-INF/logging.properties
+++ b/war/WEB-INF/logging.properties
@@ -12,3 +12,4 @@
 # Set the default logging level for all loggers to WARNING
 .level = WARNING
 se.findout.tempo.server.ModelRepositoryServiceImpl.level = FINE
+se.findout.tempo.server.PushServer.level = FINE
